--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
         <input type="checkbox" id="pictureCheck" />
         <label for="pictureCheck" style="margin-left: 8px">Have you clicked a picture of the animal?</label>
     </div>
+    <div><b><i>Do not forget to attach it in the next step</i></b></div>
     <div style="
         display: flex;
         align-items: center;
